// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`integration test for init command runs on a workspace 1`] = `
"? What is the url to your github repo?
? should we include github action workflows? (Y/n)
? What is the name of your default branch? (main)
"
`;

exports[`integration test for init command sets gitSiteUrl default to repo url 1`] = `
"? What is the url to your github repo? (https://www.github.com/jbolda/covector)
? should we include github action workflows? (Y/n)
? What is the name of your default branch? (main)
"
`;
